test/asm/string-concat.err
warning: Treating strings as numbers is deprecated [-Wobsolete]
    at string-concat.asm(21)
warning: Treating strings as numbers is deprecated [-Wobsolete]
    at string-concat.asm(21)
error: syntax error, unexpected ++
    at string-concat.asm(25)
error: syntax error, unexpected ++, expecting ] or + or -
    at string-concat.asm(26)
Assembly aborted with 2 errors!
